test: finishing tests for ExtractMethodPreconditions